[tool.poetry]
name = "dvbt-py"
version = "0.1.0"
description = "Implementation decoding of dvbt signal"
authors = ["Jakub Latusek <jk.latusek@gmail.com>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
numpy = "^2.0.0"
scipy = "^1.14.0"
matplotlib = "^3.9.0"
jupyter = "^1.0.0"
pyside6 = "^6.7.2"
mpld3 = "^0.5.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
cython = "^3.0.10"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
line-length = 120